--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -737,7 +737,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO"
+    "### Comparaison entre APrioriClassifier, ML2DClassifier et MAP2DClassifier\n",
+    "**APrioriClassifier : Ce classifieur est sans doute le moins intéressant, il estime la classe de n'importe quel individu par la classe majoritaire, Le rappel etant à 100%, le classifieur a donc identifié correctement tous les resultats positifs réels, cependant, il identifie une proportion de 69% d'identifications positives ce qui est très faible. On a donc un couple (Precision, Rappel) pas très bon.**\n",
+    "\n",
+    "\n",
+    "\n",
+    "**ML2DClassifier : Ce classifieur est basé sur le principe du maximum de vraisemblance pour estimer la classe d'un individu. Ce classifieur a identifié correctement 81,8% des résultats positifs réels et la proportion d'identifications positives qui a été effectivement correcte est 88,97%, ce qui donne un très bon couple (Precision, Rappel)=( 88,97%,81,8%), on peut donc dire qu'il est considérablement meilleur que le classifieur a priori**\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "**MAP2DClassifier : Ce classifieur est basé sur le principe du maximum a posteriori pour estimer la classe d'un individu. Il donne un couple (Precision, Rappel) = (85,7%,82,6%) très bon et assez proche de celui du classifier ML2D.**\n",
+    "\n",
+    "## TODO : On pourrait calculer la moyenne harmonique pour comparer ces deux derniers classifieurs"
    ]
   },
   {
@@ -867,7 +879,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO"
+    "### Montrons que P(A,B,C)=P(A)*P(B|A)*P(C|B)\n",
+    "On a: $$P(A|C \\cap B) = P(A|B)   \\hspace{14cm} (1)$$  etant donnée que A est indépendant de C sachant B\n",
+    "De plus, la formule des probabilités composées nous donne: $$P(A \\cap B \\cap C)= P(B \\cap C \\cap A) =  P(B) * P(C|B) * P(A|C \\cap B)  \\hspace{5cm}(2)$$ \n",
+    "D'après (1): \n",
+    "$$P(A \\cap B \\cap C) = P(C|B) * P(A|B) * P(B)   \\hspace{10cm} (3)$$ \n",
+    "D'après Bayes:\n",
+    "$$P(B) * P(A|B) = P(A) * P(B|A)    \\hspace{12cm}(4)$$ \n",
+    "On remplacant dans (3) et en utilisant le resultat (4) on obtient:\n",
+    "$$P(A \\cap B \\cap C) = P(A,B,C)=P(A)*P(B|A)*P(C|B)$$"
    ]
   },
   {
@@ -889,7 +909,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO"
+    "### Sans utiliser l'indépendance conditionnelle\n",
+    "***Notation : Distincts(X) : Nombre de valeurs distincts de la variable X***\n",
+    "\n",
+    "Si on est dans le cas où toutes les variables sont dépendantes alors pour chacune de ces variables, nous devons considérer toutes les valeurs que peuvent prendre les autres attributs.\n",
+    "Donc le nombre de probabilités est égal au produit du nombre de valeurs distincts de chaque variable: $$ \\prod_{X \\in \\{A,B,C\\}} \\mbox{Distincts(X)}$$\n",
+    "On multiplie ensuite ce nombre par la taille d'un float\n",
+    "Donc on trouve $$5 * 5 * 5 = 125$$\n",
+    "$$taille\\hspace{0.3cm} en\\hspace{0.3cm} mémoire = 125 * 8 = 1000 \\hspace{0.3cm}octets$$\n",
+    "### En utilisant l'indépendance conditionnelle\n",
+    "Avec l'utilisation de l'intépendance conditionnelle, les variables ne sont plus vraiment dépendantes, de plus, on a: $$P(A,B,C)=P(A)*P(B|A)*P(C|B)$$\n",
+    "donc:\n",
+    "$$le \\hspace{0.3cm}nombre\\hspace{0.3cm} de \\hspace{0.3cm}probabilités\\hspace{0.3cm} à \\hspace{0.3cm}calculer = Distincts(A)+Distincts(B)*Distincts(A)+Distincts(C)*Distincts(B)$$\n",
+    "\n",
+    "\n",
+    "$$le \\hspace{0.3cm}nombre\\hspace{0.3cm} de \\hspace{0.3cm}probabilités\\hspace{0.3cm} à \\hspace{0.3cm}calculer = 5 + 5^{2} + 5^{2} = 55$$\n",
+    "$$taille\\hspace{0.3cm} en\\hspace{0.3cm} mémoire = 55 * 8 = 440 \\hspace{0.3cm}octets$$"
    ]
   },
   {
@@ -1444,7 +1479,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO"
+    "#### Precision = $\\frac{VP}{VP*FP}$\n",
+    "#### Rappel = $\\frac{VP}{VP*FN}$\n",
+    "**En théorie, le point idéal serait situé en (1,1), en effet, ce point coincide avec le fait que toutes les estimations sont correctes (100% de vrai positif) autrement dit, on a aucune estimation fausse ( FN = 0 et FP = 0 ).**\n",
+    "\n",
+    "\n",
+    "**En pratique, le but est de maximiser à la fois la precision ( Quelle proportion d'identifications positives était effectivement correcte?) et le rappel (Quelle proportion de résultats positifs réels a été identifiée correctement?), cependant, l'amélioration de l'un se fait toujours au détriment de l'autre donc il est nécessaire de trouver un equilibre entre les deux pour pouvoir comparer les classifieurs entre eux.**\n",
+    "\n",
+    "**Cet equilibre est souvent définie selon le problème que traite les classifieurs, pour certains problèmes on aura besoin d'une précision plus grande et pour d'autre un rappel plus grand. Sur les graphes ci-dessous, on pourra dire que plus un point est proche en distance du point (1,1), plus le classifieur est bon.**"
    ]
   },
   {
