--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -52,8 +52,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:41:58.892046Z",
-     "start_time": "2019-03-26T17:41:58.710557Z"
+     "end_time": "2019-03-27T20:34:55.045091Z",
+     "start_time": "2019-03-27T20:34:53.339561Z"
     }
    },
    "outputs": [],
@@ -67,8 +67,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:01.357410Z",
-     "start_time": "2019-03-26T17:41:59.386427Z"
+     "end_time": "2019-03-27T20:34:57.481321Z",
+     "start_time": "2019-03-27T20:34:55.051046Z"
     },
     "scrolled": true
    },
@@ -87,8 +87,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:01.641620Z",
-     "start_time": "2019-03-26T17:42:01.396352Z"
+     "end_time": "2019-03-27T20:34:58.066140Z",
+     "start_time": "2019-03-27T20:34:57.500316Z"
     }
    },
    "outputs": [
@@ -250,8 +250,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:03.457539Z",
-     "start_time": "2019-03-26T17:42:01.702056Z"
+     "end_time": "2019-03-27T20:35:00.145038Z",
+     "start_time": "2019-03-27T20:34:58.103238Z"
     },
     "scrolled": false
    },
@@ -293,8 +293,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:04.205222Z",
-     "start_time": "2019-03-26T17:42:03.506519Z"
+     "end_time": "2019-03-27T20:35:00.905896Z",
+     "start_time": "2019-03-27T20:35:00.184115Z"
     }
    },
    "outputs": [
@@ -344,8 +344,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:11.878655Z",
-     "start_time": "2019-03-26T17:42:10.249248Z"
+     "end_time": "2019-03-27T20:35:03.535758Z",
+     "start_time": "2019-03-27T20:35:01.778341Z"
     },
     "scrolled": false
    },
@@ -386,8 +386,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:16.991268Z",
-     "start_time": "2019-03-26T17:42:16.975580Z"
+     "end_time": "2019-03-27T20:35:15.296504Z",
+     "start_time": "2019-03-27T20:35:15.280266Z"
     }
    },
    "outputs": [
@@ -431,8 +431,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:18.588443Z",
-     "start_time": "2019-03-26T17:42:18.575732Z"
+     "end_time": "2019-03-27T20:35:17.006898Z",
+     "start_time": "2019-03-27T20:35:16.987843Z"
     }
    },
    "outputs": [],
@@ -482,8 +482,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:20.079758Z",
-     "start_time": "2019-03-26T17:42:20.060935Z"
+     "end_time": "2019-03-27T20:35:18.207746Z",
+     "start_time": "2019-03-27T20:35:18.188612Z"
     }
    },
    "outputs": [
@@ -520,8 +520,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:21.421614Z",
-     "start_time": "2019-03-26T17:42:21.336564Z"
+     "end_time": "2019-03-27T20:35:19.759544Z",
+     "start_time": "2019-03-27T20:35:19.517684Z"
     }
    },
    "outputs": [
@@ -559,8 +559,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:22.380418Z",
-     "start_time": "2019-03-26T17:42:22.357349Z"
+     "end_time": "2019-03-27T20:35:20.496702Z",
+     "start_time": "2019-03-27T20:35:20.479964Z"
     }
    },
    "outputs": [
@@ -607,8 +607,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:23.680798Z",
-     "start_time": "2019-03-26T17:42:23.661616Z"
+     "end_time": "2019-03-27T20:35:21.745539Z",
+     "start_time": "2019-03-27T20:35:21.722171Z"
     }
    },
    "outputs": [
@@ -633,8 +633,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:24.364192Z",
-     "start_time": "2019-03-26T17:42:24.343446Z"
+     "end_time": "2019-03-27T20:35:23.084098Z",
+     "start_time": "2019-03-27T20:35:23.058073Z"
     }
    },
    "outputs": [
@@ -676,8 +676,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:25.558616Z",
-     "start_time": "2019-03-26T17:42:25.541101Z"
+     "end_time": "2019-03-27T20:35:24.529630Z",
+     "start_time": "2019-03-27T20:35:24.512986Z"
     }
    },
    "outputs": [
@@ -702,8 +702,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:26.319535Z",
-     "start_time": "2019-03-26T17:42:26.294944Z"
+     "end_time": "2019-03-27T20:35:25.446739Z",
+     "start_time": "2019-03-27T20:35:25.427864Z"
     }
    },
    "outputs": [
@@ -763,8 +763,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:28.132408Z",
-     "start_time": "2019-03-26T17:42:28.104414Z"
+     "end_time": "2019-03-27T20:35:28.274720Z",
+     "start_time": "2019-03-27T20:35:28.254647Z"
     }
    },
    "outputs": [
@@ -813,8 +813,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:30.175746Z",
-     "start_time": "2019-03-26T17:42:30.152408Z"
+     "end_time": "2019-03-27T20:35:29.598097Z",
+     "start_time": "2019-03-27T20:35:29.575086Z"
     }
    },
    "outputs": [
@@ -908,8 +908,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:34.269960Z",
-     "start_time": "2019-03-26T17:42:33.042142Z"
+     "end_time": "2019-03-27T20:35:34.135054Z",
+     "start_time": "2019-03-27T20:35:33.087225Z"
     }
    },
    "outputs": [
@@ -951,8 +951,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:35.142060Z",
-     "start_time": "2019-03-26T17:42:35.026758Z"
+     "end_time": "2019-03-27T20:35:35.776758Z",
+     "start_time": "2019-03-27T20:35:35.708069Z"
     }
    },
    "outputs": [
@@ -977,8 +977,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:36.042769Z",
-     "start_time": "2019-03-26T17:42:35.984818Z"
+     "end_time": "2019-03-27T20:35:38.810771Z",
+     "start_time": "2019-03-27T20:35:38.746090Z"
     }
    },
    "outputs": [
@@ -1068,8 +1068,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:38.979161Z",
-     "start_time": "2019-03-26T17:42:38.890450Z"
+     "end_time": "2019-03-27T20:35:41.611342Z",
+     "start_time": "2019-03-27T20:35:41.533681Z"
     }
    },
    "outputs": [
@@ -1101,8 +1101,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:47.643084Z",
-     "start_time": "2019-03-26T17:42:47.617032Z"
+     "end_time": "2019-03-27T20:35:43.824469Z",
+     "start_time": "2019-03-27T20:35:43.804960Z"
     }
    },
    "outputs": [
@@ -1153,8 +1153,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:50.459799Z",
-     "start_time": "2019-03-26T17:42:50.373205Z"
+     "end_time": "2019-03-27T20:35:45.504923Z",
+     "start_time": "2019-03-27T20:35:45.386871Z"
     }
    },
    "outputs": [
@@ -1187,8 +1187,8 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:52.055173Z",
-     "start_time": "2019-03-26T17:42:51.968895Z"
+     "end_time": "2019-03-27T20:35:47.961871Z",
+     "start_time": "2019-03-27T20:35:47.862973Z"
     }
    },
    "outputs": [
@@ -1234,8 +1234,8 @@
    "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:53.229209Z",
-     "start_time": "2019-03-26T17:42:53.190494Z"
+     "end_time": "2019-03-27T20:35:49.210924Z",
+     "start_time": "2019-03-27T20:35:49.162318Z"
     }
    },
    "outputs": [
@@ -1277,8 +1277,8 @@
    "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:54.493373Z",
-     "start_time": "2019-03-26T17:42:54.299893Z"
+     "end_time": "2019-03-27T20:35:52.716370Z",
+     "start_time": "2019-03-27T20:35:52.524750Z"
     }
    },
    "outputs": [
@@ -1304,8 +1304,8 @@
    "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:55.205830Z",
-     "start_time": "2019-03-26T17:42:55.076312Z"
+     "end_time": "2019-03-27T20:35:53.934717Z",
+     "start_time": "2019-03-27T20:35:53.797065Z"
     }
    },
    "outputs": [
@@ -1331,8 +1331,8 @@
    "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:42:56.148864Z",
-     "start_time": "2019-03-26T17:42:56.110810Z"
+     "end_time": "2019-03-27T20:35:54.687731Z",
+     "start_time": "2019-03-27T20:35:54.647049Z"
     }
    },
    "outputs": [
@@ -1364,8 +1364,8 @@
    "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:43:01.604911Z",
-     "start_time": "2019-03-26T17:43:01.475779Z"
+     "end_time": "2019-03-27T20:35:56.023563Z",
+     "start_time": "2019-03-27T20:35:55.893352Z"
     }
    },
    "outputs": [
@@ -1391,8 +1391,8 @@
    "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:43:02.220232Z",
-     "start_time": "2019-03-26T17:43:02.150644Z"
+     "end_time": "2019-03-27T20:35:56.912556Z",
+     "start_time": "2019-03-27T20:35:56.869581Z"
     }
    },
    "outputs": [
@@ -1466,8 +1466,8 @@
    "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:43:11.036547Z",
-     "start_time": "2019-03-26T17:43:10.556985Z"
+     "end_time": "2019-03-27T20:36:00.029336Z",
+     "start_time": "2019-03-27T20:35:59.541498Z"
     }
    },
    "outputs": [
@@ -1500,8 +1500,8 @@
    "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:43:12.355161Z",
-     "start_time": "2019-03-26T17:43:11.976459Z"
+     "end_time": "2019-03-27T20:36:01.891237Z",
+     "start_time": "2019-03-27T20:36:01.511251Z"
     }
    },
    "outputs": [
@@ -1547,8 +1547,8 @@
    "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:43:18.314004Z",
-     "start_time": "2019-03-26T17:43:18.244253Z"
+     "end_time": "2019-03-27T20:36:03.669943Z",
+     "start_time": "2019-03-27T20:36:03.600508Z"
     }
    },
    "outputs": [
@@ -1585,8 +1585,8 @@
    "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T17:43:24.222591Z",
-     "start_time": "2019-03-26T17:43:24.161391Z"
+     "end_time": "2019-03-27T20:36:05.277161Z",
+     "start_time": "2019-03-27T20:36:05.215980Z"
     }
    },
    "outputs": [
@@ -1629,11 +1629,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T21:59:22.670617Z",
-     "start_time": "2019-03-26T21:59:22.607195Z"
+     "end_time": "2019-03-27T20:36:07.140699Z",
+     "start_time": "2019-03-27T20:36:07.056174Z"
     },
     "scrolled": true
    },
@@ -1673,11 +1673,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T21:59:25.639864Z",
-     "start_time": "2019-03-26T21:59:24.243688Z"
+     "end_time": "2019-03-27T20:36:10.377523Z",
+     "start_time": "2019-03-27T20:36:08.788757Z"
     }
    },
    "outputs": [
@@ -1691,7 +1691,7 @@
        "       [0.55128095, 0.12140024, 0.18890573, 0.68149423, 0.        ]])"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1729,11 +1729,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T21:59:29.143201Z",
-     "start_time": "2019-03-26T21:59:29.129552Z"
+     "end_time": "2019-03-27T20:36:20.641393Z",
+     "start_time": "2019-03-27T20:36:20.627463Z"
     }
    },
    "outputs": [
@@ -1743,7 +1743,7 @@
        "0.14490408192274778"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1754,11 +1754,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T22:58:18.815346Z",
-     "start_time": "2019-03-26T22:58:18.800204Z"
+     "end_time": "2019-03-27T20:36:23.863032Z",
+     "start_time": "2019-03-27T20:36:23.843678Z"
     }
    },
    "outputs": [
@@ -1772,7 +1772,7 @@
        "       [0.55128095, 0.        , 0.18890573, 0.68149423, 0.        ]])"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1795,11 +1795,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-26T23:00:18.899476Z",
-     "start_time": "2019-03-26T23:00:18.871897Z"
+     "end_time": "2019-03-27T20:37:17.004448Z",
+     "start_time": "2019-03-27T20:37:16.983174Z"
     }
    },
    "outputs": [
@@ -1816,7 +1816,7 @@
        " ('thalach', 'thal', 0.15528941819154782)]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1844,11 +1844,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-20T14:34:49.921114Z",
-     "start_time": "2019-03-20T14:34:49.902053Z"
+     "end_time": "2019-03-27T21:05:41.699461Z",
+     "start_time": "2019-03-27T21:05:41.672598Z"
     }
    },
    "outputs": [
@@ -1858,7 +1858,7 @@
        "[{'a', 'b', 'c'}, {'d', 'e'}]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1872,21 +1872,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-20T14:34:49.940912Z",
-     "start_time": "2019-03-20T14:34:49.926617Z"
+     "end_time": "2019-03-27T21:08:05.787032Z",
+     "start_time": "2019-03-27T21:08:05.772317Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'age', 'ca', 'chol', 'oldpeak', 'slope', 'thalach', 'trestbps'}]"
+       "[{'a', 'b', 'c', 'd', 'e'}, {'p', 'q'}]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "projet.ConnexSets([('a', 'b', 2), ('a', 'c', 2), ('b', 'c', 3), \n",
+    "                   ('a', 'd', 3), ('a', 'a', 2), ('d', 'e', 3), ('p', 'q', 5)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-27T21:34:12.923818Z",
+     "start_time": "2019-03-27T21:34:12.906117Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'age',\n",
+       "  'ca',\n",
+       "  'chol',\n",
+       "  'cp',\n",
+       "  'oldpeak',\n",
+       "  'slope',\n",
+       "  'thal',\n",
+       "  'thalach',\n",
+       "  'trestbps'}]"
+      ]
+     },
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1909,11 +1943,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-20T14:34:50.079990Z",
-     "start_time": "2019-03-20T14:34:49.943267Z"
+     "end_time": "2019-03-27T23:32:09.126045Z",
+     "start_time": "2019-03-27T23:32:09.113297Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "liste_test = [('trestbps', 'chol', 0.6814942282235203),\n",
+    " ('age', 'trestbps', 0.641718295908513),\n",
+    " ('age', 'thalach', 0.6365766485465845),\n",
+    " ('chol', 'oldpeak', 0.5246930555244587),\n",
+    " ('oldpeak', 'slope', 0.25839871090530614),\n",
+    " ('chol', 'ca', 0.2528327956181666)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-27T23:39:14.353558Z",
+     "start_time": "2019-03-27T23:39:14.262401Z"
     }
    },
    "outputs": [
@@ -1922,13 +1975,45 @@
       "text/plain": [
        "[('ca', 'chol'),\n",
        " ('chol', 'trestbps'),\n",
-       " ('trestbps', 'age'),\n",
-       " ('age', 'thalach'),\n",
        " ('chol', 'oldpeak'),\n",
+       " ('oldpeak', 'slope'),\n",
+       " ('trestbps', 'age'),\n",
+       " ('age', 'thalach')]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "projet.OrientConnexSets(train,liste_test,'target')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-27T23:47:09.953817Z",
+     "start_time": "2019-03-27T23:47:09.870706Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('thal', 'thalach'),\n",
+       " ('thalach', 'age'),\n",
+       " ('age', 'trestbps'),\n",
+       " ('trestbps', 'chol'),\n",
+       " ('trestbps', 'cp'),\n",
+       " ('chol', 'oldpeak'),\n",
+       " ('chol', 'ca'),\n",
        " ('oldpeak', 'slope')]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
